style: fix heading, footer and img--overflowing container,
Styling for review page, reworking flex and grid for review page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,12 +44,17 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 	display: block;
 }
 
+img, embed, object, video {
+    max-width: 100%;
+}
+
 /*----- main container for page -----*/
 #main-container {
     display: flex;
     justify-content: center;
     align-content: center;
     flex-direction: column;
+    min-width: 100vw;
 }
 
 
@@ -63,7 +68,6 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 
 nav {
-    width: 100vw;
     /*height: 5vh;*/
     padding: 2vh;
     /*background-color: #252831;*/
@@ -153,7 +157,7 @@ nav h1 a {
     display: flex;
     flex-direction: column;
     width: 100vw;
-    background-color: rgba(119, 13, 13, 0.52);
+    /*background-color: rgba(119, 13, 13, 0.52);*/
 
 }
 
@@ -220,7 +224,7 @@ nav h1 a {
     margin: 15px;
     max-width: 100vw;
     /*min-height: 380px;*/
-    padding: 0 30px 25px;
+    /*padding: 0 30px 25px;*/
     text-align: center;
     /*width: 270px;*/
 }
@@ -276,12 +280,23 @@ nav h1 a {
 /*        Restaurant Details Page | restaurant.html                 */
 /* ================================================================ */
 
-.reviews-container {
-    display: grid;
-    grid-template: 20% 60% 20% / 100%;
-    grid-template-areas: "header"
-                         "maincontent"
-                         "footer";
+/*.review-page-container {*/
+    /*display: grid;*/
+    /*grid-template: 10% 70% 20% / 100%;*/
+    /*grid-template-areas: "header"*/
+                         /*"maincontent"*/
+                         /*"footer";*/
+/*}*/
+
+.review-page-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.restaurant-info-container {
+
 }
 
 .reviews-header {
@@ -322,7 +337,7 @@ nav h1 a {
     line-height: 1.1;
 }
 #restaurant-img {
-	width: 100vh;
+	width: 100vw;
 }
 
 #restaurant-address {
@@ -386,9 +401,12 @@ nav h1 a {
     margin: 0 0 10px;
 }
 
+#restaurant-hours {
+    padding: 0 4vw;
+}
+
 #restaurant-hours td {
     color: #fff;
-    margin-left: 1vh;
 }
 
 
@@ -410,7 +428,8 @@ footer {
 }
 
 .reviews-footer {
-    grid-area: footer
+    grid-area: footer;
+    width: 90vw;
     /*bottom: 0;*/
     /*position: absolute;*/
     /*width: 50%;*/
